TZ_9 done without tests